# expensa

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-cuda.txt  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: default_categories.yaml  default_config.yaml
docs/: improvement-proposals.md  plan-multi-account-support.md  proposal-local-llm.md
src/expensa/: __init__.py  accounts.py  cli.py  config.py
src/expensa/enrichment/: secondary.py  vendor_web.py
src/expensa/features/: embeddings.py  iban.py  model_registry.py  numeric.py  pipeline.py  temporal.py
src/expensa/ingestion/: __init__.py  _parsing.py  csv_loader.py  dedup.py  normalizer.py
src/expensa/ingestion/sources/: __init__.py  paypal.py
src/expensa/ml/: active_learning.py  classifier.py  embedding_viz.py  embedding_viz_cache.py  eval_cache.py  eval_report.py  evaluation.py
src/expensa/storage/: admin.py  backup.py  categories.py  crypto.py  database.py  migrations.py  schema.sql  sql.py
src/expensa/ui/: _components.py  _date_presets.py  _pending_edits.py  _shared.py  categories_tab.py  dashboard.py  data_tab.py  eval_tab.py  process.py  review_tab.py  settings.py  streamlit_app.py
src/expensa/utils/: logging.py
src/expensa/viz/: __init__.py  charts.py  data.py  exporter.py
src/expense_analyzer/: __init__.py  accounts.py  cli.py  config.py
src/expense_analyzer/enrichment/: display.py  notes.py  secondary.py  vendor_web.py
src/expense_analyzer/features/: embeddings.py  iban.py  model_registry.py  pipeline.py  similarity.py  temporal.py
src/expense_analyzer/ingestion/: __init__.py  _parsing.py  csv_loader.py  dedup.py
src/expense_analyzer/ingestion/sources/: __init__.py  paypal.py
src/expense_analyzer/ml/: active_learning.py  classifier.py  clustering.py  embedding_viz.py  embedding_viz_cache.py  eval_cache.py  eval_report.py  evaluation.py
src/expense_analyzer/storage/: admin.py  backup.py  categories.py  crypto.py  database.py  migrations.py  own_ibans.py  schema.sql  stats.py
src/expense_analyzer/ui/: _components.py  _shared.py  categories_tab.py  dashboard.py  data_tab.py  eval_tab.py  review_tab.py  settings.py  streamlit_app.py
src/expense_analyzer/utils/: colors.py
src/expense_analyzer/viz/: __init__.py  charts.py  data.py
tests/: conftest.py
tests/fixtures/: sample_de.csv  sample_de_paypal.csv  sample_de_short_dates.csv  sample_overlap.csv  sample_paypal.csv
tests/integration/: test_category_similarity.py  test_end_to_end.py
tests/unit/: test_accounts.py  test_active_learning.py  test_admin.py  test_backup.py  test_categories.py  test_classifier.py  test_cli.py  test_clustering.py  test_colors.py  test_config.py  test_config_accounts.py  test_crypto.py  test_csv_loader.py  test_dashboard_insights.py  test_dashboard_stats.py  test_dedup.py  test_embedding_viz.py  test_enrich_secondary.py  test_enrichment.py  test_enrichment_display.py  test_eval_cache_and_zeroshot.py  test_evaluation.py  test_feature_engineering.py  test_features_numeric.py  test_features_pipeline.py  test_iban.py  test_migrations.py  test_ml_backlog.py  test_normalizer.py  test_own_ibans.py  test_save_user_config.py  test_sources_paypal.py  test_stats.py  test_storage.py  test_temporal_bulk.py  test_viz.py
