[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-analyzer-de"
version = "0.1.0"
description = "Local German expense analysis: ingest CSVs, dedup and categorize on-device with Hugging Face models. No cloud LLMs."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Felix Hieber" }]
keywords = ["expenses", "german", "banking", "categorization", "embeddings", "huggingface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: German",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "rapidfuzz>=3.5",
    "schwifty>=2024.1.0",
    "python-dateutil>=2.8",
    "click>=8.1",
    "plotly>=5.18",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "sentence-transformers>=2.6",
    "transformers>=4.40",
    "torch>=2.2",
    "streamlit>=1.41",
    "streamlit-aggrid>=1.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.1",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
vendor-lookup = [
    "duckduckgo-search>=5.0",
]
# At-rest database encryption via SQLCipher. `sqlcipher3-wheels` ships
# prebuilt wheels for Linux, macOS and Windows (no system SQLCipher
# needed) and imports as `sqlcipher3`. Opt-in per account from the
# Settings → Database → Encryption section.
encryption = [
    "sqlcipher3-wheels>=0.5",
]
# Static image export for `expense viz --out *.png` (or *.svg / *.pdf).
# Plotly's write_image() needs kaleido; HTML export needs nothing extra.
png-export = [
    "kaleido>=0.2.1",
]
# PDF report export from the Quality tab's "Build PDF report" button.
# Needs reportlab (layout) + kaleido (chart→PNG); both lazy-imported.
report-export = [
    "reportlab>=4.0",
    "kaleido>=0.2.1",
]

[project.scripts]
expense = "expense_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
expense_analyzer = ["../config/*.yaml", "storage/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that download HF models or take >5s (deselect with -m 'not slow')",
]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "N806",   # ML uses uppercase X / X_cache by convention
    "N818",   # Exception suffix not required for our domain types
    "SIM102", # nested-if rewrites hurt readability of Streamlit forms
    "SIM105", # try/except/pass is clearer than contextlib.suppress here
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
